Styled the email input to be full width / fix spacing.

--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -53,7 +53,7 @@ body {
 input {
   /* width: 100% !important; */
   padding: 1rem;
-  border: 1px solid #777;
+  border: 1px solid #999;
 }
 
 
